# videoapp

./: .gitignore  manage.py  pyproject.toml  requirements.txt
accounts/: models.py
accounts/migrations/: 0001_initial.py  0002_alter_user_options_user_follow_user_icon_and_more.py  0003_alter_user_username.py  0004_alter_user_options.py
main/: admin.py  backends.py  forms.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_alter_user_username.py  0002_alter_video_title.py  0002_uservideosettings_image_quality.py  0003_alter_uservideosettings_options_alter_video_options_and_more.py  0003_alter_video_title.py  0004_alter_video_title.py  0005_alter_user_username.py  0006_alter_user_username.py  0007_alter_user_username.py  0008_alter_video_video_delete_uservideosettings.py  0009_remove_user_is_registered.py  0010_alter_user_username.py  0011_alter_user_email.py  0012_alter_video_user.py  0013_delete_videocomment.py  0014_alter_authenticationcode_code.py  0015_rename_uploaded_date_video_uploaded_at_and_more.py  0016_alter_user_profile.py  0017_authenticationcode_updated_at.py
main/templates/mail_text/: email_reset.txt  password_reset.txt  registration.txt
main/templates/main/: account.html  account_delete.html  account_delete_done.html  base.html  email_reset.html  email_reset_confirmation.html  following.html  home.html  login.html  password_change.html  password_reset.html  password_reset_confirmation.html  terms.html  (+10 more)
video_app/: settings.py  settings_dev.py  urls.py
video_app/settings/: common.py  dev.py  settings_common.py  settings_dev.py
(+26 files in other folders)
