[tool.poetry]
name = "video_app"
version = "0.1.0"
description = ""
authors = ["guro-Ishiguro <ryu32349581@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.4"
Pillow = "^9.3.0"
black = "^22.12.0"
django-allauth = "^0.51.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
